--- a/.github/workflows/plugins.yml
+++ b/.github/workflows/plugins.yml
@@ -112,9 +112,9 @@ jobs:
           START_WEB: '0'
         ports:
           - 4566:4566
-      # we have two localstacks since upgrading localstack was causing lambda tests to fail
-      # To-Do: Debug localstack and lambda
-      localstack-lambda:
+      # we have two localstacks since upgrading localstack was causing lambda & S3 tests to fail
+      # To-Do: Debug localstack / lambda and localstack / S3
+      localstack-legacy:
         image: localstack/localstack:1.1.0
         ports:
           - "127.0.0.1:4567:4567" # Edge
@@ -131,7 +131,7 @@ jobs:
           EDGE_PORT_HTTP: 4567
     env:
       PLUGINS: aws-sdk
-      SERVICES: localstack localstack-lambda
+      SERVICES: localstack localstack-legacy
     steps:
       - uses: actions/checkout@v2
       - uses: ./.github/actions/testagent/start
