--- a/.github/workflows/plugins.yml
+++ b/.github/workflows/plugins.yml
@@ -192,6 +192,7 @@ jobs:
     env:
       PLUGINS: aws-sdk
       SERVICES: localstack localstack-legacy
+      DD_DATA_STREAMS_ENABLED: true
     steps:
       - uses: actions/checkout@v2
       - uses: ./.github/actions/testagent/start
