--- a/.github/workflows/plugins.yml
+++ b/.github/workflows/plugins.yml
@@ -127,24 +127,24 @@ jobs:
           echo "Major Version: $majorVersion"
           echo "MAJOR_VERSION=$majorVersion" >> $GITHUB_ENV
       - name: Check package version
-        if: env.MAJOR_VERSION == '4'
+        if: env.MAJOR_VERSION != '3'
         run: |
-          echo "Package version is 4. Proceeding with the next steps."
-      - if: env.MAJOR_VERSION == '4'
+          echo "Package version is not 3. Proceeding with the next steps."
+      - if: env.MAJOR_VERSION != '3'
         run: yarn install --ignore-engines
-      - if: env.MAJOR_VERSION == '4'
+      - if: env.MAJOR_VERSION != '3'
         uses: ./.github/actions/node/oldest
-      - if: env.MAJOR_VERSION == '4'
+      - if: env.MAJOR_VERSION != '3'
         run: yarn test:plugins:ci
-      - if: env.MAJOR_VERSION == '4'
+      - if: env.MAJOR_VERSION != '3'
         run: echo "PACKAGE_VERSION_RANGE=>=5.8.0" >> "$GITHUB_ENV"
-      - if: env.MAJOR_VERSION == '4'
+      - if: env.MAJOR_VERSION != '3'
         uses: ./.github/actions/node/20 # currently the latest version of aerospike only supports node 20
-      - if: env.MAJOR_VERSION == '4'
+      - if: env.MAJOR_VERSION != '3'
         run: yarn test:plugins:ci
-      - if: env.MAJOR_VERSION == '4'
+      - if: env.MAJOR_VERSION != '3'
         uses: ./.github/actions/testagent/logs
-      - if: env.MAJOR_VERSION == '4'
+      - if: env.MAJOR_VERSION != '3'
         uses: codecov/codecov-action@v2
   amqp10: # TODO: move rhea to its own job
     runs-on: ubuntu-latest
