--- a/.github/workflows/plugins.yml
+++ b/.github/workflows/plugins.yml
@@ -45,27 +45,32 @@ jobs:
       DD_TEST_AGENT_URL: http://testagent:9126
       AEROSPIKE_HOST_ADDRESS: aerospike
     steps:
-      - uses: actions/checkout@v2
+      - name: Checkout and Setup Node
+        uses: actions/checkout@v2
+
       - uses: actions/setup-node@v3
         with:
           node-version: '14'
+
       - id: pkg
         run: |
-          content=`cat ./package.json | tr '\n' ' '`
+          content=$(cat ./package.json | tr '\n' ' ')
           echo "::set-output name=json::$content"
+
       - id: extract
         run: |
           version="${{fromJson(steps.pkg.outputs.json).version}}"
           majorVersion=$(echo "$version" | cut -d '.' -f 1)
           echo "Major Version: $majorVersion"
           echo "MAJOR_VERSION=$majorVersion" >> $GITHUB_ENV
+
       - name: Check package version
         run: |
           if [ "$MAJOR_VERSION" != '3' ]; then
             echo "Package version is not 3. Exiting."
             exit 0
           fi
-        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+
       - name: Install dependencies
         run: |
           apt-get update && \
@@ -74,12 +79,22 @@ jobs:
             wget \
             g++ libssl1.0.0 libssl-dev zlib1g-dev && \
           npm install -g yarn
-      - run: yarn install --ignore-engines
-      - uses: ./.github/actions/node/14
-      - run: yarn test:plugins:ci
-      - if: always()
+
+      - name: Yarn Install
+        run: yarn install --ignore-engines
+
+      - name: Custom Action for Version 3
+        uses: ./.github/actions/node/14
+
+      - name: Run tests for version 3
+        run: yarn test:plugins:ci
+
+      - name: Additional step if always
+        if: always()
         uses: ./.github/actions/testagent/logs
-      - uses: codecov/codecov-action@v2
+
+      - name: Codecov for version 3
+        uses: codecov/codecov-action@v2
   aerospike-4:
     runs-on: ubuntu-latest
     services:
