--- a/.github/workflows/plugins.yml
+++ b/.github/workflows/plugins.yml
@@ -45,56 +45,35 @@ jobs:
       DD_TEST_AGENT_URL: http://testagent:9126
       AEROSPIKE_HOST_ADDRESS: aerospike
     steps:
-      - name: Checkout and Setup Node
-        uses: actions/checkout@v2
-
+      - uses: actions/checkout@v2
       - uses: actions/setup-node@v3
         with:
           node-version: '14'
-
       - id: pkg
         run: |
-          content=$(cat ./package.json | tr '\n' ' ')
+          content=`cat ./package.json | tr '\n' ' '`
           echo "::set-output name=json::$content"
-
       - id: extract
         run: |
           version="${{fromJson(steps.pkg.outputs.json).version}}"
           majorVersion=$(echo "$version" | cut -d '.' -f 1)
           echo "Major Version: $majorVersion"
           echo "MAJOR_VERSION=$majorVersion" >> $GITHUB_ENV
-
       - name: Check package version
+        if: env.MAJOR_VERSION == '3'
         run: |
-          if [ "$MAJOR_VERSION" != '3' ]; then
-            echo "Package version is not 3. Exiting."
-            done
-          fi
-
-      - name: Install dependencies
-        run: |
+          echo "Package version is 3. Proceeding with the next steps."
           apt-get update && \
           apt-get install -y \
             python3 python3-pip \
             wget \
             g++ libssl1.0.0 libssl-dev zlib1g-dev && \
           npm install -g yarn
-
-      - name: Yarn Install
-        run: yarn install --ignore-engines
-
-      - name: Custom Action for Version 3
-        uses: ./.github/actions/node/14
-
-      - name: Run tests for version 3
-        run: yarn test:plugins:ci
-
-      - name: Additional step if always
-        if: always()
-        uses: ./.github/actions/testagent/logs
-
-      - name: Codecov for version 3
-        uses: codecov/codecov-action@v2
+          yarn install --ignore-engines &&
+          ./.github/actions/node/14 &&
+          yarn test:plugins:ci &&
+          ./.github/actions/testagent/logs &&
+          codecov/codecov-action@v2
   aerospike-4:
     runs-on: ubuntu-latest
     services:
