--- a/.github/workflows/plugins.yml
+++ b/.github/workflows/plugins.yml
@@ -63,17 +63,23 @@ jobs:
         if: env.MAJOR_VERSION == '3'
         run: |
           echo "Package version is 3. Proceeding with the next steps."
+      - name: Install dependencies
+        if: env.MAJOR_VERSION == '3'
+        run: |
           apt-get update && \
           apt-get install -y \
             python3 python3-pip \
             wget \
             g++ libssl1.0.0 libssl-dev zlib1g-dev && \
           npm install -g yarn
-          yarn install --ignore-engines &&
-          ./.github/actions/node/14 &&
-          yarn test:plugins:ci &&
-          ./.github/actions/testagent/logs &&
-          codecov/codecov-action@v2
+      - if: env.MAJOR_VERSION == '3'
+        run: yarn install --ignore-engines
+      - if: env.MAJOR_VERSION == '3'
+        uses: ./.github/actions/node/14
+      - if: env.MAJOR_VERSION == '3'
+        run: yarn test:plugins:ci
+      - if: env.MAJOR_VERSION == '3'
+        uses: codecov/codecov-action@v2
   aerospike-4:
     runs-on: ubuntu-latest
     services:
@@ -95,7 +101,15 @@ jobs:
       - if: always()
         uses: ./.github/actions/testagent/logs
       - uses: codecov/codecov-action@v2
+
   aerospike-5:
+    strategy:
+      matrix:
+        node-version: [16]
+        range: ['5.5.0 - 5.7.0']
+        include:
+          - node-version: 20
+            range: '>=5.8.0'
     runs-on: ubuntu-latest
     services:
       aerospike:
@@ -105,7 +119,7 @@ jobs:
     env:
       PLUGINS: aerospike
       SERVICES: aerospike
-      PACKAGE_VERSION_RANGE: '5.5.0 - 5.7.0'
+      PACKAGE_VERSION_RANGE: ${{ matrix.range }}
     steps:
       - uses: actions/checkout@v2
       - uses: ./.github/actions/testagent/start
@@ -124,16 +138,41 @@ jobs:
         if: env.MAJOR_VERSION != '3'
         run: |
           echo "Package version is not 3. Proceeding with the next steps."
+          uses: actions/setup-node@v3
+          with:
+            node-version: ${{ matrix.node-version }}
+      - if: env.MAJOR_VERSION != '3'
+        run: |
           yarn install --ignore-engines
-        - uses: ./.github/actions/node/oldest
-        - run: |
-            yarn test:plugins:ci
-            echo "PACKAGE_VERSION_RANGE=>=5.8.0" >> "$GITHUB_ENV"
-          - uses: ./.github/actions/node/20
-          - run: yarn test:plugins:ci
-          - if: always()
-            uses: ./.github/actions/testagent/logs
-          - uses: codecov/codecov-action@v2
+          yarn test:plugins:ci
+      - if: always()
+        uses: ./.github/actions/testagent/logs
+      - uses: codecov/codecov-action@v2
+  next:
+    strategy:
+      matrix:
+        node-version: [16]
+        range: ['>=9.5 <11.1', '>=11.1 <13.2']
+        include:
+          - node-version: 18
+            range: '>=13.2'
+    runs-on: ubuntu-latest
+    env:
+      PLUGINS: next
+      RANGE: ${{ matrix.range }}
+    steps:
+      - uses: actions/checkout@v2
+      - uses: ./.github/actions/testagent/start
+      - uses: ./.github/actions/node/setup
+      - uses: actions/setup-node@v3
+        with:
+          node-version: ${{ matrix.node-version }}
+      - run: yarn install
+      - run: yarn test:plugins:ci
+      - if: always()
+        uses: ./.github/actions/testagent/logs
+      - uses: codecov/codecov-action@v2
+  
   amqp10: # TODO: move rhea to its own job
     runs-on: ubuntu-latest
     services:
