--- a/.github/workflows/plugins.yml
+++ b/.github/workflows/plugins.yml
@@ -135,8 +135,7 @@ jobs:
           yarn install --ignore-engines
           yarn test:plugins:ci
       - if: always()
-        uses: ./.github/actions/testagent/logs
-      - uses: codecov/codecov-action@v2
+        uses: codecov/codecov-action@v2
 
   amqp10: # TODO: move rhea to its own job
     runs-on: ubuntu-latest
