--- a/.github/workflows/plugins.yml
+++ b/.github/workflows/plugins.yml
@@ -59,8 +59,7 @@ jobs:
           majorVersion=$(echo "$version" | cut -d '.' -f 1)
           echo "Major Version: $majorVersion"
           echo "MAJOR_VERSION=$majorVersion" >> $GITHUB_ENV
-      - name: Install dependencies and run tests 
-        if: env.MAJOR_VERSION == '3'
+      - if: env.MAJOR_VERSION == '3'
         run: |
           apt-get update && \
           apt-get install -y \
