--- a/.github/workflows/plugins.yml
+++ b/.github/workflows/plugins.yml
@@ -130,7 +130,8 @@ jobs:
       - uses: actions/setup-node@v3
         with:
           node-version: ${{ matrix.node-version }}
-      - if: env.MAJOR_VERSION != '3'
+      - name: Install dependencies and run tests 
+        if: env.MAJOR_VERSION != '3'
         run: |
           yarn install --ignore-engines
           yarn test:plugins:ci
