--- a/.github/workflows/system-tests.yml
+++ b/.github/workflows/system-tests.yml
@@ -62,15 +62,21 @@ jobs:
     runs-on: ubuntu-latest
     env:
       TEST_LIBRARY: nodejs
+      #keep this line until system-tests -> robertomonteromiguel/parametric_use_load_binary_nodejs merged
       NODEJS_DDTRACE_MODULE: datadog/dd-trace-js#${{ github.sha }}
     steps:
       - name: Checkout system tests
         uses: actions/checkout@v3
         with:
           repository: 'DataDog/system-tests'
+          ref: 'robertomonteromiguel/parametric_use_load_binary_nodejs'
       - uses: actions/setup-python@v4
         with:
           python-version: '3.9'
+      - name: Checkout dd-trace-js
+        uses: actions/checkout@v3
+        with:
+          path: 'binaries/dd-trace-js'
       - name: Build
         run: ./build.sh -i runner
       - name: Run
