--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -159,11 +159,11 @@ services:
       - LDAP_PASSWORDS=password1,password2
 
   testagent:
-    image: ghcr.io/datadog/dd-apm-test-agent/ddapm-test-agent:v1.13.1
+    image: ghcr.io/datadog/dd-apm-test-agent/ddapm-test-agent:v1.16.0
     ports:
         - "127.0.0.1:9126:9126"
     environment:
         - LOG_LEVEL=DEBUG
         - TRACE_LANGUAGE=javascript
-        - ENABLED_CHECKS=trace_count_header,meta_tracer_version_header
+        - ENABLED_CHECKS=trace_stall,meta_tracer_version_header,trace_count_header,trace_peer_service
         - PORT=9126
