--- a/.github/workflows/plugins.yml
+++ b/.github/workflows/plugins.yml
@@ -30,11 +30,11 @@ jobs:
         ports:
           - 3000:3000
       testagent:
-        image: ghcr.io/datadog/dd-apm-test-agent/ddapm-test-agent:latest
+        image: ghcr.io/datadog/dd-apm-test-agent/ddapm-test-agent:v1.16.0
         env:
           LOG_LEVEL: DEBUG
           TRACE_LANGUAGE: javascript
-          DISABLED_CHECKS: trace_content_length
+          ENABLED_CHECKS: trace_stall,meta_tracer_version_header,trace_count_header,trace_peer_service
           PORT: 9126
         ports:
           - 9126:9126
@@ -992,11 +992,11 @@ jobs:
           - 1521:1521
           - 5500:5500
       testagent:
-        image: ghcr.io/datadog/dd-apm-test-agent/ddapm-test-agent:latest
+        image: ghcr.io/datadog/dd-apm-test-agent/ddapm-test-agent:v1.16.0
         env:
           LOG_LEVEL: DEBUG
           TRACE_LANGUAGE: javascript
-          DISABLED_CHECKS: trace_content_length
+          ENABLED_CHECKS: trace_stall,meta_tracer_version_header,trace_count_header,trace_peer_service
           PORT: 9126
         ports:
           - 9126:9126
