--- a/.github/workflows/appsec.yml
+++ b/.github/workflows/appsec.yml
@@ -27,9 +27,7 @@ jobs:
       - uses: actions/checkout@v4
       - uses: ./.github/actions/node/setup
       - run: yarn install
-      - uses: ./.github/actions/node/16
-      - run: yarn test:appsec:ci
-      - uses: ./.github/actions/node/18
+      - uses: ./.github/actions/node/oldest
       - run: yarn test:appsec:ci
       - uses: ./.github/actions/node/latest
       - run: yarn test:appsec:ci
@@ -87,8 +85,6 @@ jobs:
       - uses: ./.github/actions/node/setup
       - run: yarn install
       - uses: ./.github/actions/node/oldest
-      - run: yarn test:appsec:plugins:ci
-      - uses: ./.github/actions/node/16
       - run: yarn test:appsec:plugins:ci
       - uses: ./.github/actions/node/18
       - run: yarn test:appsec:plugins:ci
@@ -197,9 +193,7 @@ jobs:
       - uses: actions/checkout@v4
       - uses: ./.github/actions/node/setup
       - run: yarn install
-      - uses: ./.github/actions/node/16
-      - run: yarn test:appsec:plugins:ci
-      - uses: ./.github/actions/node/18
+      - uses: ./.github/actions/node/oldest
       - run: yarn test:appsec:plugins:ci
       - uses: ./.github/actions/node/20
       - run: yarn test:appsec:plugins:ci
