--- a/.github/workflows/plugins.yml
+++ b/.github/workflows/plugins.yml
@@ -900,11 +900,8 @@ jobs:
   next:
     strategy:
       matrix:
-        node-version: [16]
-        range: ['>=9.5 <11.1', '>=11.1 <13.2']
-        include:
-          - node-version: 18
-            range: '>=13.2'
+        node-version: [18]
+        range: ['>=13.2']
     runs-on: ubuntu-latest
     env:
       PLUGINS: next
