--- a/.github/workflows/plugins.yml
+++ b/.github/workflows/plugins.yml
@@ -901,7 +901,10 @@ jobs:
     strategy:
       matrix:
         node-version: [18]
-        range: ['>=13.2']
+        range: ['>=9.5 <11.1', '>=11.1 <13.2']
+        include:
+          - node-version: 18
+            range: '>=13.2'
     runs-on: ubuntu-latest
     env:
       PLUGINS: next
