--- a/.github/workflows/project.yml
+++ b/.github/workflows/project.yml
@@ -53,7 +53,7 @@ jobs:
   integration-cypress:
     strategy:
       matrix:
-        version: [18, latest]
+        version: [16, latest]
         # 6.7.0 is the minimum version we support
         cypress-version: [6.7.0, latest]
     runs-on: ubuntu-latest
@@ -64,10 +64,11 @@ jobs:
     steps:
       - uses: actions/checkout@v4
       - uses: ./.github/actions/node/setup
-      - run: yarn install
+      - run: yarn install --ignore-engines
       - uses: actions/setup-node@v3
         with:
           node-version: ${{ matrix.version }}
+      - run: yarn config set ignore-engines true
       - run: yarn test:integration:cypress
         env:
           CYPRESS_VERSION: ${{ matrix.cypress-version }}
