--- a/.github/workflows/plugins.yml
+++ b/.github/workflows/plugins.yml
@@ -985,9 +985,11 @@ jobs:
       SERVICES: oracledb
       DD_TEST_AGENT_URL: http://testagent:9126
     steps:
-      # Needs to remain on v3 for now due to GLIBC version
       - uses: actions/checkout@v3
-      - uses: ./.github/actions/node/setup
+      - uses: actions/setup-node@v3
+        with:
+          cache: yarn
+          node-version: '16'
       - run: yarn install --ignore-engines
       - run: yarn services
       - run: yarn test:plugins
