--- a/.github/workflows/plugins.yml
+++ b/.github/workflows/plugins.yml
@@ -89,9 +89,22 @@ jobs:
       - uses: actions/checkout@v4
       - uses: ./.github/actions/testagent/start
       - uses: ./.github/actions/node/setup
-      - run: yarn install --ignore-engines
+      - id: pkg
+        run: |
+          content=`cat ./package.json | tr '\n' ' '`
+          echo "::set-output name=json::$content"
+      - id: extract
+        run: |
+          version="${{fromJson(steps.pkg.outputs.json).version}}"
+          majorVersion=$(echo "$version" | cut -d '.' -f 1)
+          echo "Major Version: $majorVersion"
+          echo "MAJOR_VERSION=$majorVersion" >> $GITHUB_ENV
       - uses: ./.github/actions/node/oldest
-      - run: yarn test:plugins:ci
+      - name: Install dependencies and run tests 
+        if: env.MAJOR_VERSION != '5'
+        run: |
+          yarn install --ignore-engines
+          yarn test:plugins:ci
       - if: always()
         uses: ./.github/actions/testagent/logs
       - uses: codecov/codecov-action@v3
@@ -99,8 +112,8 @@ jobs:
   aerospike-5:
     strategy:
       matrix:
-        node-version: [16]
-        range: ['5.5.0 - 5.7.0']
+        node-version: [18]
+        range: ['5.2.0 - 5.7.0']
         include:
           - node-version: 20
             range: '>=5.8.0'
@@ -132,7 +145,7 @@ jobs:
         with:
           node-version: ${{ matrix.node-version }}
       - name: Install dependencies and run tests 
-        if: env.MAJOR_VERSION != '3'
+        if: env.MAJOR_VERSION == '5'
         run: |
           yarn install --ignore-engines
           yarn test:plugins:ci
